--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -39,6 +40,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -46,18 +48,24 @@
     "cmdk": "1.0.4",
     "cookie": "^1.0.2",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "jose": "^6.0.12",
     "lucide-react": "^0.454.0",
+    "monaco-editor": "^0.52.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "openai": "^5.12.2",
+    "pdf-parse": "^1.1.1",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-dropzone": "latest",
     "react-hook-form": "^7.60.0",
+    "react-json-editor-ajrm": "^2.5.14",
+    "react-json-view": "^1.21.3",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
@@ -71,6 +79,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie": "^1.0.0",
     "@types/node": "^22",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
